--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -210,9 +210,11 @@
         "ERROR_CODE_INVALID_SIGNATURE_VALUE": "Invalid signature value.",
         "ERROR_CODE_MISSING_PRIVATE_PARAMS": "The downloaded global configuration did not contain private parameters",
         "ERROR_CODE_UNINITIALIZED": "The configuration client is initialising.",
-        "SUCCESS": "Everything ok",
+        "WAITING": "The configuration client is initialising.",
+        "OK": "Everything ok",
         "UNKNOWN": "Unknown"
       },
+      "last_successful_url": "Last successful URL",
       "title": "Global configuration"
     },
     "javaVersion": {
@@ -276,7 +278,8 @@
         "ERROR_CODE_OCSP_RESPONSE_INVALID": "Unable to parse the OCSP response",
         "ERROR_CODE_OCSP_RESPONSE_UNVERIFIED": "Unable to verify the OCSP response",
         "ERROR_CODE_OCSP_UNINITIALIZED": "Status request not sent yet",
-        "SUCCESS": "Everything ok",
+        "WAITING": "Status request not sent yet",
+        "OK": "Everything ok",
         "UNKNOWN": "Unknown"
       },
       "title": "OCSP responders"
@@ -300,7 +303,9 @@
         "ERROR_CODE_MALFORMED_TIMESTAMP_SERVER_URL": "Malformed timestamp server URL. Check the URL.",
         "ERROR_CODE_TIMESTAMP_REQUEST_TIMED_OUT": "Connection timed out. Check the network connection.",
         "ERROR_CODE_TIMESTAMP_UNINITIALIZED": "Connection ok, no timestamp request made yet",
-        "SUCCESS": "Everything ok",
+        "ERROR_CODE_UNKNOWN_HOST": "Connection error, unknown host",
+        "WAITING": "Connection ok, no timestamp request made yet",
+        "OK": "Everything ok",
         "UNKNOWN": "Unknown"
       },
       "title": "Timestamping"
@@ -408,14 +413,34 @@
       }
     },
     "csr_not_found": "CSR not found",
+    "database_error": "Database error",
     "diagnostic_request_failed": "Diagnostic request failed",
     "duplicate_accessright": "Duplicate access right",
     "endpoint_already_exists": "Endpoint already exists",
     "endpoint_not_found": "Endpoint not found",
+    "failed_to_save_instance_identifier": "Failed to save instance identifier to a file",
     "forbidden_disable_management_service_client": "The management services provider cannot be deactivated.",
     "forbidden_enable_maintenance_mode_for_management_service": "The management services provider cannot be deactivated.",
     "global_conf_download_request_failed": "Global configuration download request failed",
+    "global_conf_download_url_connection_failure": "Failed to open connection to the global configuration download url",
+    "global_conf_get_version_failed": "Failed to determine global configuration version",
+    "global_conf_header_field_missing": "Global configuration response is required missing header field",
+    "global_conf_header_field_wrong_value": "Global configuration response header field has wrong value",
+    "global_conf_missing_signed_data": "Global configuration is missing signed data",
+    "global_conf_missing_signed_data_expiration_date": "Global configuration signed data is missing expiration date",
+    "global_conf_missing_verification_cert": "Cannot find verification certificate to verify signature of global configuration",
+    "global_conf_missing_verification_cert_hash_algo_id": "Cannot find verification certificate hash algorithm id header field",
     "global_conf_outdated": "Global configuration is outdated",
+    "global_conf_parsing_downloaded_conf_directory_failure": "Failed to parse downloaded global configuration directory",
+    "global_conf_part_invalid_instance_identifier": "Global configuration part file has invalid instance identifier",
+    "global_conf_part_download_failure": "Failed to download global configuration part",
+    "global_conf_part_downloaded_file_integrity_failure": "Failed to verify downloaded global configuration part integrity",
+    "global_conf_part_downloaded_hash_failure": "Failed to get hash for downloaded global configuration part",
+    "global_conf_part_file_expiration_date_update_failure": "Failed to update expiration date of global configuration part file",
+    "global_conf_part_file_hash_failure": "Failed to get hash for existing global configuration file",
+    "global_conf_part_file_save_failure": "Failed to save global configuration part file to file system",
+    "global_conf_signature_decode_failure": "Failed to decode signature of global configuration",
+    "global_conf_signature_verification_failure": "Failed to verify signature of global configuration",
     "gpg_key_generation_failed": "GPG keypair generation failed",
     "gpg_key_generation_interrupted": "GPG keypair generation interrupted",
     "identifier_not_found": "Identifier not found",
@@ -434,6 +459,7 @@
     "invalid_service_url": "Invalid service url",
     "invalid_wsdl": "Invalid WSDL",
     "invalid_wsdl_service_identifier": "Invalid WSDL service identifier",
+    "io_error": "IO error",
     "key_and_cert_generation_failed": "Key and certificate generation failed",
     "key_not_found": "Key not found",
     "local_group_code_already_exists": "Local group code already exists",
@@ -441,6 +467,7 @@
     "local_group_member_not_found": "Local group member not found",
     "local_group_not_found": "Local group not found",
     "malformed_anchor": "Malformed anchor",
+    "malformed_global_conf": "Malformed global configuration",
     "maintenance_mode_change_request_already_submitted": "Maintenance mode change is already pending",
     "malformed_url": "Malformed URL",
     "management_request_sending_failed": "Sending of management request failed",
@@ -450,6 +477,27 @@
     "member_code_exists": "Member code exists",
     "member_code_not_provided": "Member code is not provided",
     "missing_parameter": "Missing parameter",
+    "mlog": {
+      "adding_signature_to_ts_token_failed": "Adding signer certificate to timestamp token failed",
+      "calculating_message_digest_failed": "Calculating message digest failed",
+      "failed_to_build_signature_hash_chain": "Failed to build signature hash chain for batch timestamping",
+      "failed_to_prepare_signature_data": "Failed to prepare signature data for timestamping",
+      "log_manager_unavailable": "Unable to connect to LogManager, immediate timestamping status unavailable",
+      "malformed_timestamp_server_url": "Malformed timestamp server URL. Check the URL.",
+      "message_log_record_not_found": "Could not find log record from the database",
+      "no_log_records_specified": "Cannot timestamp, no log records specified",
+      "no_signature_hashes_specified": "Cannot timestamp, no signature hashes specified",
+      "reading_timestamp_response_failed": "Could not read timestamp response. The response should have valid ASN.1 structure",
+      "timestamp_non_granted_response": "Status in timestamping response is not 'granted' nor 'grantedWithMods'",
+      "timestamping_non_ok_response": "Timestamping response did not return 'OK' HTTP status: {0}: {1}",
+      "timestamp_request_timed_out": "Connection timed out. Check the network connection.",
+      "timestamp_signer_verification_failed": "Failed to verify timestamp signer information",
+      "timestamp_token_encoding_failed": "Timestamp token der encoding failed",
+      "timestamp_token_signer_info_not_found": "Could not get signer information from the timestamp token",
+      "tsp_certificate_not_found": "Could not find TSP certificate for timestamp",
+      "updating_message_signature_failed": "Updating the message signature properties failed"
+    },
+    "network_error": "Network error",
     "openapi_parsing_error": "Parsing OpenApi3 description failed",
     "orphans_not_found": "Orphan keys, certificates and/or CSRs that belong to the given client were not found",
     "pin_code_exists": "PIN code exists",
@@ -465,7 +513,7 @@
     "service_code_already_exists": "Service code already exists",
     "service_code_reserved": "The service code provided is reserved for internal system use and cannot be assigned to custom services.",
     "service_description_not_found": "Service description not found",
-    "service_not_found": "service not found",
+    "service_not_found": "Service not found",
     "sign_cert_not_supported": "Signing certificate is not supported",
     "software_token_init_failed": "Software token initialisation failed",
     "timestamping_service_already_configured": "Timestamping service is already configured",
@@ -474,6 +522,7 @@
       "malformed_csr": "CSR data is malformed"
     },
     "token_not_active": "Token is not active",
+    "unknown_host": "Connection error, unknown host",
     "unsupported_openapi_version": "Unsupported OpenAPI version. Only versions 3.0.x and 3.1.0 are currently supported.",
     "url_already_exists": "URL already exists",
     "warnings_detected": "Warnings detected",
@@ -515,6 +564,10 @@
     },
     "maintenanceModeMessage": "Maintenance mode message",
     "memberCode": "Member Code",
+    "ocsp_connection_error": "Unable to connect to the OCSP responder",
+    "ocsp_failed": "Unable to fetch response from the OCSP responder",
+    "ocsp_response_parsing_failure": "Unable to parse the OCSP response",
+    "ocsp_response_verification_failure": "Unable to verify the OCSP response",
     "path": "path",
     "pin": "PIN",
     "securityServerAddress": "Security Server address",
