feat: As a Security Server Administrator I want the diagnostics information available for global configuration and TSA to be improved so that I can more easily figure out issues with it
further error code and messages tweaks

refs: XRDDEV-2921

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -423,22 +423,22 @@
     "forbidden_enable_maintenance_mode_for_management_service": "The management services provider cannot be deactivated.",
     "global_conf_download_request_failed": "Global configuration download request failed",
     "global_conf_download_url_connection_failure": "Failed to open connection to the global configuration download url",
-    "global_conf_get_version_failed": "Failed to determine global configuration version",
-    "global_conf_header_field_missing": "Global configuration response is required missing header field",
-    "global_conf_header_field_wrong_value": "Global configuration response header field has wrong value",
+    "global_conf_get_version_failed": "Failed to determine global configuration version from the url",
+    "global_conf_header_field_missing": "Global configuration response is missing required header field {0}",
+    "global_conf_header_field_missing_parameter": "Global configuration response header field {0} is missing parameter {1}",
+    "global_conf_header_field_wrong_value": "Global configuration response header field {0} has wrong value (value: {1}, expected: {2})",
     "global_conf_missing_signed_data": "Global configuration is missing signed data",
     "global_conf_missing_signed_data_expiration_date": "Global configuration signed data is missing expiration date",
-    "global_conf_missing_verification_cert": "Cannot find verification certificate to verify signature of global configuration",
-    "global_conf_missing_verification_cert_hash_algo_id": "Cannot find verification certificate hash algorithm id header field",
+    "global_conf_missing_verification_cert": "Cannot find verification certificate (certificate hash {0}) to verify signature of global configuration",
     "global_conf_outdated": "Global configuration is outdated",
-    "global_conf_parsing_downloaded_conf_directory_failure": "Failed to parse downloaded global configuration directory",
-    "global_conf_part_invalid_instance_identifier": "Global configuration part file has invalid instance identifier",
+    "global_conf_parsing_downloaded_conf_directory_failure": "Failed to parse downloaded global configuration directory from {0}",
+    "global_conf_part_invalid_instance_identifier": "Global configuration part file {0} has invalid instance identifier",
     "global_conf_part_download_failure": "Failed to download global configuration part",
-    "global_conf_part_downloaded_file_integrity_failure": "Failed to verify downloaded global configuration part integrity",
+    "global_conf_part_downloaded_file_integrity_failure": "Failed to verify downloaded global configuration part integrity of {0}",
     "global_conf_part_downloaded_hash_failure": "Failed to get hash for downloaded global configuration part",
     "global_conf_part_file_expiration_date_update_failure": "Failed to update expiration date of global configuration part file",
     "global_conf_part_file_hash_failure": "Failed to get hash for existing global configuration file",
-    "global_conf_part_file_save_failure": "Failed to save global configuration part file to file system",
+    "global_conf_part_file_save_failure": "Failed to save global configuration part file to {0}",
     "global_conf_signature_decode_failure": "Failed to decode signature of global configuration",
     "global_conf_signature_verification_failure": "Failed to verify signature of global configuration",
     "gpg_key_generation_failed": "GPG keypair generation failed",
@@ -487,15 +487,20 @@
       "message_log_record_not_found": "Could not find log record from the database",
       "no_log_records_specified": "Cannot timestamp, no log records specified",
       "no_signature_hashes_specified": "Cannot timestamp, no signature hashes specified",
+      "no_timestamping_provider_found": "No timestamping services configured",
       "reading_timestamp_response_failed": "Could not read timestamp response. The response should have valid ASN.1 structure",
-      "timestamp_non_granted_response": "Status in timestamping response is not 'granted' nor 'grantedWithMods'",
-      "timestamping_non_ok_response": "Timestamping response did not return 'OK' HTTP status: {0}: {1}",
+      "timestamp_non_granted_response": "Status in timestamping response is not 'granted' nor 'grantedWithMods'. (status: {0} statusString: {1} failInfo: {2})",
+      "timestamping_non_ok_response": "Timestamping response did not return 'OK' HTTP status. Response was: {0}, {1}",
+      "timestamp_provider_connection_failed": "Network error: connection to timestamping service failed",
+      "timestamp_record_save_failure": "Could not save timestamp record to the database",
       "timestamp_request_timed_out": "Connection timed out. Check the network connection.",
-      "timestamp_signer_verification_failed": "Failed to verify timestamp signer information",
+      "timestamp_response_object_creation_failed": "Could not create RFC 3161 timestamp response object",
+      "timestamp_response_validation_failed": "Timestamp response validation against the request failed",
+      "timestamp_signer_verification_failed": "Failed to verify timestamp signer information. Verifier message: {0}",
       "timestamp_token_encoding_failed": "Timestamp token der encoding failed",
       "timestamp_token_signer_info_not_found": "Could not get signer information from the timestamp token",
-      "tsp_certificate_not_found": "Could not find TSP certificate for timestamp",
-      "updating_message_signature_failed": "Updating the message signature properties failed"
+      "tsp_certificate_not_found": "Could not find TSP certificate",
+      "updating_message_signature_failed": "Updating the message signature properties in the database failed"
     },
     "network_error": "Network error",
     "openapi_parsing_error": "Parsing OpenApi3 description failed",
