feat: add the central server connection test to diagnostics page Refs: XRDDEV-2922

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -330,6 +330,34 @@
       "failedRequests": "Failed requests",
       "disabledTitle": "Operational Data Monitoring Is Disabled",
       "disabledMessage": "Operational data monitoring is disabled for this Security Server. To enable it, please install the operational data monitoring add-on (xroad-addon-opmonitoring)."
+    },
+    "connection": {
+      "centralServer": {
+        "title": "Central Server",
+        "globalConf": "Global configuration download",
+        "globalConfHttp": "http",
+        "globalConfHttps": "https",
+        "authCertRequest": "Authentication certificate registration service",
+        "test": "Test"
+      },
+      "periodInfo": "Select start and end",
+      "date": "Date",
+      "time": "Time",
+      "party": "Party",
+      "partyInfo": "Service, subsystem, member",
+      "client": "Client",
+      "service": "Service",
+      "exchangeRole": "Exchange role",
+      "exchangeRoleInfo": "Producer or Consumer",
+      "producer": "Producer",
+      "status": "Status",
+      "statusInfo": "Message exchange status",
+      "success": "Success",
+      "failure": "Failure",
+      "successfulRequests": "Successful requests",
+      "failedRequests": "Failed requests",
+      "disabledTitle": "Operational Data Monitoring Is Disabled",
+      "disabledMessage": "Operational data monitoring is disabled for this Security Server. To enable it, please install the operational data monitoring add-on (xroad-addon-opmonitoring)."
     }
   },
   "endpoints": {
@@ -503,6 +531,7 @@
       "updating_message_signature_failed": "Updating the message signature properties in the database failed"
     },
     "network_error": "Network error",
+    "http_error": "HTTP error",
     "openapi_parsing_error": "Parsing OpenApi3 description failed",
     "orphans_not_found": "Orphan keys, certificates and/or CSRs that belong to the given client were not found",
     "pin_code_exists": "PIN code exists",
@@ -1030,7 +1059,8 @@
     },
     "diagnostics": {
       "overview": "Overview",
-      "traffic": "Traffic"
+      "traffic": "Traffic",
+      "connection": "Connection Test"
     }
   },
   "token": {
