--- a/deployment/native-packages/src/xroad/ubuntu/generic/changelog
+++ b/deployment/native-packages/src/xroad/ubuntu/generic/changelog
@@ -1,4 +1,11 @@
-xroad (7.8.0-0) stable; urgency=medium
+xroad (8.0.0-0) stable; urgency=medium
+
+  * Change history is found at /usr/share/doc/xroad-
+    common/CHANGELOG.md.gz
+
+ -- NIIS <info@niis.org>  Tue, 07 Oct 2025 13:29:39 +0000
+
+xroad (7.8.0-1) stable; urgency=medium
 
   * Change history is found at /usr/share/doc/xroad-
     common/CHANGELOG.md.gz
