refactor: X-Road label to CamDX label

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -551,7 +551,7 @@
     "undefinedSubsystemName": "undefined"
   },
   "global": {
-    "appTitle": "X-Road Security Server"
+    "appTitle": "CamDX Security Server"
   },
   "globalAlert": {
     "backupRestoreInProgress": "The Security Server configuration is being restored from a backup. Process started at {startTime}",
