--- a/src/shared-ui/src/locales/es.json
+++ b/src/shared-ui/src/locales/es.json
@@ -210,7 +210,7 @@
     "software": {
       "feedback": "Comentario",
       "title": "Software",
-      "versionPrefix": "X-road"
+      "versionPrefix": "CamDX"
     }
   },
   "global": {
