--- a/src/shared-ui/src/locales/et.json
+++ b/src/shared-ui/src/locales/et.json
@@ -207,7 +207,7 @@
     "software": {
       "feedback": "Tagasiside",
       "title": "Tarkvara",
-      "versionPrefix": "X-Road"
+      "versionPrefix": "CamDX"
     }
   },
   "global": {
