--- a/src/shared-ui/src/locales/ru.json
+++ b/src/shared-ui/src/locales/ru.json
@@ -206,7 +206,7 @@
     "software": {
       "feedback": "Обратная связь",
       "title": "Программное обеспечение",
-      "versionPrefix": "X-Road"
+      "versionPrefix": "CamDX"
     }
   },
   "global": {
