--- a/src/shared-ui/src/locales/tk.json
+++ b/src/shared-ui/src/locales/tk.json
@@ -206,7 +206,7 @@
     "software": {
       "feedback": "Seslenmeler we teswirler",
       "title": "Programma üpjünçiligi",
-      "versionPrefix": "X-Road"
+      "versionPrefix": "CamDX"
     }
   },
   "global": {
