--- a/src/central-server/admin-service/ui/src/locales/en.json
+++ b/src/central-server/admin-service/ui/src/locales/en.json
@@ -175,7 +175,7 @@
     }
   },
   "global": {
-    "appTitle": "X-Road Central Server",
+    "appTitle": "CamDX Central Server",
     "approve": "Approve",
     "class": "Class",
     "code": "Code",
