fix: test and translation

--- a/src/security-server/admin-service/ui/src/locales/et.json
+++ b/src/security-server/admin-service/ui/src/locales/et.json
@@ -987,7 +987,7 @@
     "diagnostics": {
       "overview": "Ülevaade",
       "traffic": "Päringute statistika",
-      "connection": "Ühenduse testimine"
+      "connectionTesting": "Ühenduse testimine"
     }
   },
   "token": {
