--- a/src/security-server/admin-service/ui/src/locales/pt-BR.json
+++ b/src/security-server/admin-service/ui/src/locales/pt-BR.json
@@ -306,14 +306,14 @@
       "title": "Carimbo de tempo"
     },
     "connection": {
-      "ok": "Everything ok",
-      "test": "Test",
+      "ok": "Tudo certo",
+      "test": "Teste",
       "centralServer": {
-        "title": "Central Server",
-        "globalConf": "Global configuration download",
+        "title": "Servidor Central",
+        "globalConf": "Download da configuração global",
         "globalConfHttp": "http",
         "globalConfHttps": "https",
-        "authCertRequest": "Authentication certificate registration service"
+        "authCertRequest": "Serviço de registro de certificado de autenticação"
       }
     }
   },
@@ -424,7 +424,7 @@
     "invalid_service_url": "URL de serviço inválida",
     "invalid_wsdl": "WSDL inválido",
     "invalid_wsdl_service_identifier": "Identificador de serviço WSDL inválido",
-    "io_error": "IO error",
+    "io_error": "Erro de E/S",
     "key_and_cert_generation_failed": "Falha ao gerar chave e certificado",
     "key_not_found": "Chave não encontrada",
     "local_group_code_already_exists": "Código de grupo local já existe",
@@ -441,8 +441,8 @@
     "member_code_exists": "Código de membro já existe",
     "member_code_not_provided": "Código de membro não informado",
     "missing_parameter": "Parâmetro ausente",
-    "network_error": "Network error",
-    "http_error": "HTTP error",
+    "network_error": "Erro de rede",
+    "http_error": "Erro HTTP",
     "openapi_parsing_error": "Falha ao interpretar descrição OpenAPI 3",
     "orphans_not_found": "Não foram encontradas chaves, certificados ou CSRs órfãos vinculados ao cliente",
     "pin_code_exists": "PIN já existe",
@@ -964,9 +964,9 @@
       "systemParameters": "Parâmetros do Sistema"
     },
     "diagnostics": {
-      "overview": "Overview",
-      "traffic": "Traffic",
-      "connection": "Connection Testing"
+      "overview": "Visão Geral",
+      "traffic": "Tráfego",
+      "connectionTesting": "Teste de Conexão"
     }
   },
   "token": {
