--- a/src/security-server/admin-service/ui/src/locales/tk.json
+++ b/src/security-server/admin-service/ui/src/locales/tk.json
@@ -256,14 +256,14 @@
       "disabledMessage": "Bu Howpsuzlyk Serweri üçin operasion maglumatlary gözegçilik öçürildi. Ony işe girizmek üçin operasion maglumatlary gözegçilik goşmaçasyny (xroad-addon-opmonitoring) guruň."
     },
     "connection": {
-      "ok": "Everything ok",
+      "ok": "Her şey yolunda",
       "test": "Test",
       "centralServer": {
-        "title": "Central Server",
-        "globalConf": "Global configuration download",
+        "title": "Merkezi Sunucu",
+        "globalConf": "Küresel yapılandırma indirme",
         "globalConfHttp": "http",
         "globalConfHttps": "https",
-        "authCertRequest": "Authentication certificate registration service"
+        "authCertRequest": "Kimlik doğrulama sertifikası kayıt servisi"
       }
     }
   },
@@ -380,7 +380,7 @@
     "invalid_service_url": "Gulluk url nädogry",
     "invalid_wsdl": "WSDL nädogry",
     "invalid_wsdl_service_identifier": "Gulluk WSDL identifikatory nädogry",
-    "io_error": "IO error",
+    "io_error": "G/Ç hatası",
     "key_and_cert_generation_failed": "Açar we şahadatnama döredilmedi",
     "key_not_found": "Açar tapylmady",
     "local_group_code_already_exists": "Ýerli toparyň kody eýýäm bar",
@@ -396,8 +396,8 @@
     "member_code_exists": "Agzanyň kody bar",
     "member_code_not_provided": "Agzanyň kody görkezilmedi",
     "missing_parameter": "Parametrleri ýok",
-    "network_error": "Network error",
-    "http_error": "HTTP error",
+    "network_error": "Ağ hatası",
+    "http_error": "HTTP hatası",
     "openapi_parsing_error": "OpenApi3 beýanyny dernäp bolmady",
     "orphans_not_found": "Bu müşderä degişli ýiten açarlar, şahadatnamalar we/ýa-da CSR-ler tapylmady",
     "pin_code_exists": "PIN kod bar",
@@ -907,7 +907,7 @@
     "diagnostics": {
       "overview": "Syn",
       "traffic": "Trafik",
-      "connection": "Connection Testing"
+      "connectionTesting": "Bağlantı testi"
     }
   },
   "token": {
