--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -1043,7 +1043,7 @@
     "diagnostics": {
       "overview": "Overview",
       "traffic": "Traffic",
-      "connection": "Connection Testing"
+      "connectionTesting": "Connection Testing"
     }
   },
   "token": {
