--- a/src/security-server/admin-service/ui/src/locales/es.json
+++ b/src/security-server/admin-service/ui/src/locales/es.json
@@ -282,13 +282,13 @@
     },
     "connection": {
       "ok": "Ok",
-      "test": "Test",
+      "test": "Prueba",
       "centralServer": {
-        "title": "Central Server",
-        "globalConf": "Global configuration download",
+        "title": "Servidor Central",
+        "globalConf": "Descarga de configuración global",
         "globalConfHttp": "http",
         "globalConfHttps": "https",
-        "authCertRequest": "Authentication certificate registration service"
+        "authCertRequest": "Servicio de registro de certificados de autenticación"
       }
     }
   },
@@ -395,7 +395,7 @@
     "invalid_service_url": "La URL del servicio no es válida",
     "invalid_wsdl": "El WSDL no es válido",
     "invalid_wsdl_service_identifier": "El identificador de servicio WSDL no es válido",
-    "io_error": "IO error",
+    "io_error": "Error de E/S",
     "key_and_cert_generation_failed": "Falló la generación de clave y certificado",
     "key_not_found": "Clave no encontrada",
     "local_group_code_already_exists": "El código de grupo local ya existe",
@@ -411,8 +411,8 @@
     "member_code_exists": "El código de miembro ya existe",
     "member_code_not_provided": "No has proporcionado el código de miembro",
     "missing_parameter": "Parámetro faltante",
-    "network_error": "Network error",
-    "http_error": "HTTP error",
+    "network_error": "Error de red",
+    "http_error": "Error HTTP",
     "openapi_parsing_error": "Error al analizar la descripción de OpenApi3",
     "orphans_not_found": "Las claves huérfanas, certificados y/o CSR que pertenecen al cliente dado no fueron encontrados",
     "pin_code_exists": "El código PIN ya existe",
@@ -912,7 +912,7 @@
     "diagnostics": {
       "overview": "Resumen",
       "traffic": "Tráfico",
-      "connection": "Connection Testing"
+      "connectionTesting": "Prueba de conexión"
     },
     "keys": {
       "apiKey": "Clave de API",
