fix: translate fixes and code fixes

--- a/src/shared-ui/src/locales/es.json
+++ b/src/shared-ui/src/locales/es.json
@@ -163,14 +163,14 @@
     "backup_generation_failed": "No se pudo generar la copia de seguridad",
     "backup_restore_interrupted": "La restauración de la copia de seguridad ha sido interrumpida",
     "core": {
-      "Signer": {
-        "CertNotFound": "No se encuentra el certificado",
-        "KeyNotFound": "No se encuentra la clave",
-        "NetworkError": "El firmante no es actualmente accesible.",
-        "PinIncorrect": "PIN no válido",
-        "TokenNotAvailable": "El token no está disponible",
-        "TokenNotFound": "No se encuentra el token",
-        "UnknownMember": "X -Road Core - Signer: miembro desconocido"
+      "signer": {
+        "cert_not_found": "No se encuentra el certificado",
+        "key_not_found": "No se encuentra la clave",
+        "network_error": "El firmante no es actualmente accesible.",
+        "pin_incorrect": "PIN no válido",
+        "token_not_available": "El token no está disponible",
+        "token_not_found": "No se encuentra el token",
+        "unknown_member": "X -Road Core - Signer: miembro desconocido"
       }
     },
     "generate_backup_interrupted": "La generación de la copia de seguridad ha sido interrumpida",
