--- a/src/shared-ui/src/locales/tk.json
+++ b/src/shared-ui/src/locales/tk.json
@@ -161,13 +161,13 @@
     "backup_generation_failed": "Äiýaçlyk nusgasy döredilmedi",
     "backup_restore_interrupted": "Äiýaçlyk nusgasynyň dikeldilmegi bölündi",
     "core": {
-      "Signer": {
-        "CertNotFound": "Şahadatnama tapylmady",
-        "KeyNotFound": "Açar tapylmady",
-        "PinIncorrect": "Nädogry PIN",
-        "TokenNotAvailable": "Token elýeterli däl",
-        "TokenNotFound": "Token tapylmady",
-        "UnknownMember": "X-Road ýadrody - gol çekiji: Näbelli agza"
+      "signer": {
+        "cert_not_found": "Şahadatnama tapylmady",
+        "key_not_found": "Açar tapylmady",
+        "pin_incorrect": "Nädogry PIN",
+        "token_not_available": "Token elýeterli däl",
+        "token_not_found": "Token tapylmady",
+        "unknown_member": "X-Road ýadrody - gol çekiji: Näbelli agza"
       }
     },
     "generate_backup_interrupted": "Ätiýaçlyk nusgasynyň döredilmegi bölündi",
